# Real-Time-2D-Object-Detection

./: CMakeLists.txt  README.md  kmeans.cpp  kmeans.h  main.cpp  tasks.cpp  tasks.h
